tests/ui/async-await/generator-wf-check.witness.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generator-wf-check.rs:33:22
   |
LL |         let witness: Option<Static<T>> = None;
   |                      ^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn test_witness<T: 'static>() {
   |                  +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generator-wf-check.rs:36:9
   |
LL |         drop(witness);
   |         ^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn test_witness<T: 'static>() {
   |                  +++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
